# AIGX

./: .aigxignore  .editorconfig  .gitattributes  .gitignore  BENCHMARK.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SPEC.md  llms.txt  package.json  pyproject.toml
.aigx/: architecture.aigx  files.aigx  protocol.aigx
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  new_example.md  spec_feedback.md
.github/workflows/: validate-genome.yml
crates/aigx/: Cargo.toml  README.md
crates/aigx/src/: main.rs
docs/: aigx-in-60-seconds.md  authoring-guide.md  concept.md  faq.md  glossary.md  jit-hydration.md  limitations.md  migration.md  principles.md  roadmap.md
editors/: README.md
editors/linguist/: README.md  languages.yml  sample.aigx
editors/sublime/: README.md  aigx.sublime-syntax
editors/textmate/: README.md
editors/textmate/AIGX.tmbundle/: info.plist
editors/tree-sitter-aigx/: grammar.js  package.json
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  extension.js  language-configuration.json  package.json
editors/vscode/icons/: aigx-icon-theme.json  generate-icon.py
editors/zed/: README.md  extension.toml
examples/minimal/: README.md
examples/sourcing-app/: README.md
fixtures/corrupted/: aigx-brain-object-object-truncated.txt
integrations/: README.md
integrations/agents/: AGENTS.md
integrations/aider/: aider.conf.yml
integrations/claude-code/: CLAUDE.md
integrations/cursor/: aigx.mdc
integrations/github-actions/: aigx-validate.yml
integrations/windsurf/: windsurfrules
scripts/: release.mjs
standard/: AIGX-1.1.abnf  AIGX-1.1.md  AIGX-1.1.schema.json  LICENSE  README.md  change-control.md  conformance.md  interoperability.md  media-type-registration.md  security-considerations.md
template/: engineering.aigx  files.aigx  protocol.aigx
template/aigx/: agent.aigx  architecture.aigx  engineering.aigx  files.aigx  product.aigx  protocol.aigx
template/integrations/: claude-code.md  copilot-instructions.md  cursor-aigx.mdc
templates/starter/: README.md
tests/: test_aigx_export.py
tests/conformance/: README.md  run.py
tools/aigx-export/: README.md  aigx_export.py
tools/aigx-lint/: README.md  aigx_lint.py
tools/aigx-mcp/: README.md  aigx_mcp.py
tools/aigx-sync/: README.md  aigx_sync.py
(+82 files in other folders)
